src/test/ui/disambiguate-identical-names.stderr
error[E0308]: mismatched types
  --> $DIR/disambiguate-identical-names.rs:13:10
   |
LL |     test(&v);
   |          ^^ expected struct `std::vec::Vec`, found struct `HashMap`
   |
   = note: expected reference `&std::vec::Vec<std::vec::Vec<u32>>`
              found reference `&HashMap<u8, u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
